# NVE_Smartdok

./: .env.example  .gitignore  README.md  count_lines_of_python_code.py  grep.py  kjør_pipeline_smartdok.py  lastned_nve_elvenett_del2.py  lastned_nve_havvind.py  lastned_nve_solkraft.py  lastned_nve_vannkraftverk.py  lastned_nve_vindkraftverk.py  main.py  pyproject.toml  requirements.txt  steg1_pdf_til_md.py  steg2_md_tagging.py  steg3_identifiser_entiteter.py  steg4_nsd_til_html.py  tell_elver.py  tell_innsjøer.py  tell_vannkraftverk.py
nve_data/: backsort_names.py  build_regine_index.py  ending_map.json  find_common_endings.py  find_common_endings2.py  hent_felter_havvind.py  hent_felter_solkraft.py  hent_felter_vannkraft.py  hent_felter_varme.py  hent_felter_vindkraft.py  lastned_nve_dammer.py  lastned_nve_elvenett_del1.py  lastned_nve_innsjøer.py  lastned_nve_magasiner.py  lastned_nve_varme.py  lastned_nve_vassdragregine.py  list_felter.py  map_names.py  resolve_vassdrag.py  resolve_vassdrag2.py  test.py
